force-app/main/default/objects/custom_create289__c/custom_create289__c.object-meta.xml
<CustomObject>
    <label>Custom created object289</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects289</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>