force-app/main/default/objects/custom_create289__c/fields/custom_create_289field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_289field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 289field505</label>
    <type>Checkbox</type>
</CustomField>