force-app/main/default/objects/custom_create289__c/fields/custom_create_289field543__c.field-meta.xml
<CustomField>
    <fullName>custom_create_289field543__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 289field543</label>
    <type>Checkbox</type>
</CustomField>